package car;

public interface IConditionable {
    void inConditioner();
    void outConditioner();
}
