package car;

public interface IStartable {
    // Пустые методы, которые должны делать то, не знаю что
    // Но они не делают ничего
    void start();
    void stop();
}
